<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/accept_reject_rescheduled_bg">

    <RelativeLayout
        android:id="@+id/mainRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:padding="@dimen/_15sdp">

        <TextView
            android:id="@+id/tvJobmaAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/jobma"
            android:textColor="@color/colorLB"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvJobmaAccept"
            android:gravity="center"
            android:text="@string/select_an_action"
            android:textColor="@color/colorLB"
            android:textSize="@dimen/_11sdp"
            android:textStyle="normal" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainRelative"
        android:layout_marginTop="0.5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/accept"
            android:textColor="@color/colorlogin"
            android:textSize="@dimen/_14sdp"
            android:textStyle="normal" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardReject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardAccept"
        android:layout_marginTop="0.5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/reject"
            android:textColor="@color/colorlogin"
            android:textSize="@dimen/_14sdp"
            android:textStyle="normal" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardRescheduled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardReject"
        android:layout_marginTop="0.5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/rescheduled"
            android:textColor="@color/colorlogin"
            android:textSize="@dimen/_14sdp"
            android:textStyle="normal" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCancelForAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardRescheduled"
        android:layout_marginTop="0.5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/cancel"
            android:textColor="@color/colorCancelBtn"
            android:textSize="@dimen/_14sdp"
            android:textStyle="normal" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>