<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/relativeToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorToolbar"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:id="@+id/backArrowImage"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/back_arrow" />


        <TextView
            android:id="@+id/tvChangePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/change_password"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15sdp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeToolbar"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_15sdp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:theme="@style/StyledTilEditTextThemeColorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_password"
                android:paddingBottom="@dimen/_15sdp"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="@dimen/_11sdp"
                app:backgroundTint="@color/colorGrey" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:theme="@style/StyledTilEditTextThemeColorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:imeOptions="actionGo"
                android:paddingBottom="@dimen/_15sdp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="@dimen/_11sdp"
                app:backgroundTint="@color/colorGrey" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:theme="@style/StyledTilEditTextThemeColorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edConfirmPassword"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_15sdp"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_passwordForSetting"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="@dimen/_11sdp"
                app:backgroundTint="@color/colorGrey" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/ripple_sign_in_background"
        android:text="@string/save"
        android:textColor="@color/colorWhite" />


</RelativeLayout>
