<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_130sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:theme="@style/StyledTilEditTextThemeColorBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edEmailPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userName"
                    android:imeOptions="actionGo"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="@dimen/_15sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:theme="@style/StyledTilEditTextThemeColorBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/_15sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp"
                    app:backgroundTint="@color/colorGrey" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/forget_password"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_13sdp" />


            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@drawable/ripple_sign_in_background"
                android:text="@string/sign_in"
                android:textColor="@color/colorWhite" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <View
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_gravity="center"
                    android:background="@color/colorGrey" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/or"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/_13sdp" />


                <View
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@color/colorGrey" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">


                <ImageView
                    android:id="@+id/imageFacebook"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:src="@drawable/faceboook" />


                <ImageView
                    android:id="@+id/imageLinkediin"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:src="@drawable/linkedin" />


                <ImageView
                    android:id="@+id/imageGooodle"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:src="@drawable/gooogle" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp">


                <TextView
                    android:id="@+id/tvDontHaveAnAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/_11sdp" />


                <TextView
                    android:id="@+id/tvRegisterHere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_toRightOf="@+id/tvDontHaveAnAccount"
                    android:text="@string/register_here"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12sdp" />


            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>
