<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/mainRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorForgotYourPassword"
        android:gravity="center"
        android:padding="@dimen/_15sdp">

        <TextView
            android:id="@+id/tvFYP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="@string/forgot_your_password"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/imageCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/_5sdp"
            android:src="@drawable/icon_cancel" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainRelative"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:theme="@style/StyledTilEditTextThemeColorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterYourEmailAddressHere"
                android:imeOptions="actionGo"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="@dimen/_11sdp"
                app:backgroundTint="@color/colorGrey" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilOne"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/ripple_submit_background"
            android:text="@string/submit"
            android:textColor="@color/colorWhite" />


    </RelativeLayout>


</RelativeLayout>